# scalestack_architecture

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  scalestack_architecture.py
factories/: base.py  functions.py  lambda.py
scalestack_architecture/: __init__.py  utils.py
scalestack_architecture/factories/: api_gateway.py  base.py  datadog.py  functions.py
