[tool.poetry]
name = "scalestack_architecture"
version = "0.7.4"
description = "A package to manage the helpers to define scalestack architecture"
authors = ["Carlos Albornoz <calbornoz@scalestack.ai>"]
readme = "README.md"
packages = [{ include = "scalestack_architecture" }]

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.142.0"
constructs = "^10.3.0"
datadog-cdk-constructs-v2 = "^1.13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.0"
commitizen = "^3.25.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
update_changelog_on_bump = true
bump_message = "chore(release): $new_version"
version_files = ["pyproject.toml"]
annotated_tag = false
major_version_zero = true
version = "0.7.4"
